[package]
name = "tch-typed-tensor"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", branch = "master" }
typenum = "~1"
num = "~0"
half = "~1"
type-freak = { git = "https://github.com/jerry73204/rust-type-freak.git", branch = "master" }
